--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mysql2": "^3.15.3",
     "openai": "latest",
+    "string-similarity": "^4.0.4",
     "zod": "^4.1.13"
   },
   "devDependencies": {
