Enhance environment configuration and documentation. Add OPENAI_AGENTS_DISABLE_TRACING variable to env.sample to control tracing behavior. Update README to reflect new environment variable. Improve logging in db-tools and workflow for better performance tracking. Introduce new workflow endpoints for property extraction and duration handling, leveraging the new workflow-new module for optimized processing.

--- a/env.sample
+++ b/env.sample
@@ -3,6 +3,10 @@
 # OpenAI API Key (for workflow processing)
 OPENAI_API_KEY=
 
+# OpenAI Agents SDK: disable trace exporting (prevents "[non-fatal] Tracing: server error 503, retrying." log spam)
+# Set to 0/false to re-enable tracing.
+OPENAI_AGENTS_DISABLE_TRACING=1
+
 # Express Server Port
 PORT=3000
 
